Started calendar integration

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         }
     ],
     "require": {
-        "athari/yalinqo": "dev-master"
+        "athari/yalinqo": "dev-master",
+        "google/apiclient": "* dev-master"
     }
 }
